fixed issue with center aligning caption based images

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_layout.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_layout.scss
@@ -16,6 +16,9 @@ body{
 .wrapper{
     width: $site-width;
     @extend %block-center;
+    .wp-caption {
+        text-align: center;
+    }
 }
 
 *{
